fixed more sonarqube code smells